--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,15 @@
   color: #61dafb;
 }
 
+.primary-color {
+  color: var(--primaryColor);
+}
+
+.my-a {
+  color: var(--primaryColor);
+  cursor: pointer;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
