--- a/src/views/brand/style.less
+++ b/src/views/brand/style.less
@@ -35,4 +35,10 @@
 }
 .brand-info-model {
   text-align: left;
+  .brand-form-image {
+    padding-top: 20px;
+    img {
+      max-width: 200px;
+    }
+  }
 }
